# xplatter

./: .agentignore  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE.md  Makefile  README.md  REVIEW_ACTION_ITEMS.md  TODO.md  TOMBSTONE.md  USER_README.md  build_codegen.sh  example_api_definition.yaml  xplatter.sh  xplattergy.sh
.claude/: settings.json  settings.local.json
.claude/agents/: android-app-expert.md  architecture-reviewer.md  biz-dev-strategist.md  ios-app-expert.md  linux-app-expert.md  marketing-comms-expert.md  tech-writer-doc-reviewer.md  web-app-expert.md  windows-app-expert.md
.opencode/agents/: android-app-expert.md  architecture-reviewer.md  biz-dev-strategist.md  ios-app-expert.md  macos-app-expert.md  marketing-comms-expert.md  tech-writer-doc-reviewer.md  web-app-expert.md
docs/: CODEGEN_SPEC.md  DETAILED_SPEC.md  PLATFORM_HAZARDS.md  REVIEW_ACTION_ITEMS.md  api_definition_schema.json  api_definition_spec.md  branding_skull_session.md  example_api_definition.yaml  future_work.md  marcom_honing.md
examples/: Makefile
examples/hello-xplatter/: README.md  cross-compile-cc.mk
examples/hello-xplatter/app-android/: .gitignore  Makefile  build.gradle.kts  settings.gradle.kts
examples/hello-xplatter/app-desktop-cpp/: Makefile  main.cpp
examples/hello-xplatter/app-desktop-swift/: Makefile  (+1 more)
examples/hello-xplatter/impl-c/: CMakeLists.txt  Makefile  hello_xplatter_impl.c  test.c
examples/hello-xplatter/impl-c/platform_services/: android.c  desktop.c  ios.c  web.c
examples/hello-xplatter/impl-cpp/: CMakeLists.txt  HelloXplatter.swift  Makefile  hello_xplatter.h  hello_xplatter.js  hello_xplatter_impl.cpp  hello_xplatter_impl.h  hello_xplatter_interface.h  hello_xplatter_jni.c  hello_xplatter_shim.cpp  main.cpp
examples/hello-xplatter/impl-cpp/flatbuffers/cpp/: hello_types_generated.h
examples/hello-xplatter/impl-cpp/flatbuffers/swift/: hello_types_generated.swift
examples/hello-xplatter/impl-cpp/flatbuffers/ts/: hello.ts  hello_types.ts
examples/hello-xplatter/impl-cpp/flatbuffers/ts/hello/: greeting.ts
examples/hello-xplattergy/: README.md  cross-compile-cc.mk
schemas/: core_types.fbs  input_events.fbs
specs/: core_types.fbs
src/: go.mod  main.go
src/cmd/: dump_schema.go  generate.go  init_cmd.go  root.go  validate.go  version.go
src/loader/: schema.go  schema_test.go  yaml.go  yaml_test.go
src/model/: api.go
src/resolver/: flatc.go  flatc_test.go  types.go  types_test.go
src/testdata/: fb_return.yaml  full.yaml  invalid_handle_ref.yaml  invalid_return_string.yaml  minimal.yaml
src/validate/: semantic.go  semantic_test.go
(+121 files in other folders)
